[package]
name = "RustHydrusExternal"
version = "0.1.0"
edition = "2021"

[dependencies]
nohash-hasher = "0.2.0"
strum = "0.25.0"
strum_macros = "0.25.1"
image = "0.24.6"
pipe = { version = "0.4.0", features = ["bidirectional"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
blurhash = { version = "0.2.0", features = ["image", "gdk-pixbuf"] }
anyhow = "1.0.86"
bincode = "1.3.3"
interprocess = "2.1.0"
serde_bytes = "0.11.14"
rayon = "1.10.0"
clap = { version = "4.5.17", features = ["derive"] }


[profile.release]
opt-level = 3
lto=true
codegenunits=1
strip = true
panic = "abort"
debug = false
